✏️ HTA Spillover - Fix text spilling over container

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -470,6 +470,7 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   margin-top: 36px;
+  overflow-wrap: break-word;
 }
 
 .details__container__label {
